--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,11 @@ ul {
         padding-top: 5px;
         padding-bottom: 5px;
     }
+
+    .list-title {
+        font-weight: bold;
+        font-size: 14px;
+    }
 }
 
 .list > li:first-child {
@@ -31,6 +36,7 @@ ul {
 /* layout */
 body {
     background-color: #f7f7f7;
+    transition: all 1s;
 }
 
 header {
@@ -143,27 +149,28 @@ section {
     .project {
 
         .project-header {
-            .ph-title {
+            .title {
                 padding-bottom: 5px;
                 font-size: 14pt;
                 font-weight: bold;
                 opacity: 0.7;
-
                 i {
                     padding-right: 1%;
                     opacity: 0.7;
                     color: #6db33f;
                 }
 
+                a { text-decoration: none; }
                 a:link { color:black; }
                 a:visited { color:black; }
                 a:hover { color:grey; }
             }
 
-            .ph-subtitle {
+            .subtitle {
                 opacity: 0.7;
             }
         }
+          
 
         .project-body {
             display: flex;
@@ -178,6 +185,7 @@ section {
                     padding-bottom: 5%;
                     font-size: 15px;
                     font-weight: bold;
+                    opacity: 0.8;
                 }
 
                 .pbl-subtitle {
@@ -189,6 +197,28 @@ section {
 
             .pb-right {
                 width: 80%;
+                
+                .simple {
+                    padding: 0 10px;
+                    font-size: 14px;
+                    opacity: 0.7;
+                }
+
+                .detail {
+                    display:none;
+                }
+
+                .hs {
+                    padding: 0 10px;
+                    float:right;
+                    background-color: white;
+                    outline: none;
+                    border: none;
+                    font-size: 14px;
+                    opacity: 0.7;
+                }
+
+                button:hover { opacity: 0.3; }
             }
         }
     }
@@ -197,154 +227,76 @@ section {
 #skills {
 
     hr {
-        margin: 5% 0 5% 0;
-        background-color: #6db33f;
+        margin: 8% 0 6% 0;
         height: 1px;
         border: 0;
         opacity: 0.7;
     }
 
     .skills {
-
-        .category {
-            font-size: 18px;
+        
+        .skills-title {
+            padding-left: 2%;
+            padding-bottom: 4%;
+            font-size: 22px;
             font-weight: bold;
             opacity: 0.7;
         }
-
-        .skills-item {
-            display: flex;
-            margin-top: 5%;
-            margin-bottom: 5%;
             
-            .si-header {
-                display: flex;
-                justify-content: right;
-                align-items: center;
-                width: 15%;
-                border-radius: 10px;
+        .tab {
+            overflow: hidden;
+            
+            button {
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                padding:0;
+                outline: none;
+                cursor: pointer;
+                transition: 0.3s;
+                opacity: 0.4;
+            }
 
-                .sih-title {
-                    padding-right: 30px;
-                    text-align: center;
-                    font-weight: bold;
-                    opacity: 0.7;
+            button:hover {
+                opacity: 1;
+            }
+
+            button.active {
+                opacity: 1;
+            }
+        }
+
+        .tabcontent {
+            display: none;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 5px 20px;
+
+            .skills-item {
+                -webkit-animation: fadeEffect 1s;
+                animation: fadeEffect 1s;
+                padding: 3% 0 3% 0;
+
+                .skills-item-title {
+                    margin-left: 3%;
+                    img {
+                        height: 40px;
+                    }
+                }
+
+                .list {
+                    padding: 20px 20px 20px 30px;
                 }
             }
+        }
 
-            .si-body {
-                width: 85%;
-                border-radius: 10px;
-                border-left: 2px solid;
-            }
-
-            .java {
-                color: #cc342f;
-                border-color: rgba(#cc342f, 0.7);
-                li::marker { color: rgba(#cc342f, 0.7); }
-            }
-
-            .spring {
-                color: #6db33f;
-                border-color: rgba(#6db33f, 0.7);
-                li::marker { color: rgba(#6db33f, 0.7); }
-            }
-            
-            .jpa {
-                color: #59676a;
-                border-color: rgba(#59676a, 0.7);
-                li::marker { color: rgba(#59676a, 0.7); }
-            }
-            
-            .mybatis {
-                color: #d40000;
-                border-color: rgba(#d40000, 0.7);
-                li::marker { color: rgba(#d40000, 0.7); }
-            }
-            
-            .jsp {
-                color: #e56f1f;
-                border-color: rgba(#e56f1f, 0.7);
-                li::marker { color: rgba(#e56f1f, 0.7); }
-            }
-            
-            .thymeleaf {
-                color: #005f0f;
-                border-color: rgba(#005f0f, 0.7);
-                li::marker { color: rgba(#005f0f, 0.7); }
-            }
-            
-            .linux {
-                color: #616161;
-                border-color: rgba(#616161, 0.7);
-                li::marker { color: rgba(#616161, 0.7); }
-            }
-            
-            .docker {
-                color: #2497ed;
-                border-color: rgba(#2497ed, 0.7);
-                li::marker { color: rgba(#2497ed, 0.7); }
-            }
-            
-            .kafka {
-                color: #000000;
-                border-color: rgba(#cc342f, 0.7);
-                li::marker { color: rgba(#cc342f, 0.7); }
-            }
-            
-            .html {
-                color: #e34e26;
-                border-color: rgba(#e34e26, 0.7);
-                li::marker { color: rgba(#e34e26, 0.7); }
-            }
-            
-            .css {
-                color: #156eb0;
-                border-color: rgba(#156eb0, 0.7);
-                li::marker { color: rgba(#156eb0, 0.7); }
-            }
-            
-            .bootstrap {
-                color: #563d7c;
-                border-color: rgba(#563d7c, 0.7);
-                li::marker { color: rgba(#563d7c, 0.7); }
-            }
-            
-            .javascript {
-                color: #ead31c;
-                border-color: rgba(#ead31c, 0.7);
-                li::marker { color: rgba(#ead31c, 0.7); }
-            }
-            
-            .react {
-                color: #0ad7ff;
-                border-color: rgba(#0ad7ff, 0.7);
-                li::marker { color: rgba(#0ad7ff, 0.7); }
-            }
-            
-            .rdbms {
-                color: #59676a;
-                border-color: rgba(#59676a, 0.7);
-                li::marker { color: rgba(#59676a, 0.7); }
-            }
-            
-            .nosql {
-                color: #59676a;
-                border-color: rgba(#59676a, 0.7);
-                li::marker { color: rgba(#59676a, 0.7); }
-            }
-            
-            .git {
-                color: #f05133;
-                border-color: rgba(#f05133, 0.7);
-                li::marker { color: rgba(#f05133, 0.7); }
-            }
-            
-            .arduino {
-                color: #00979c;
-                border-color: rgba(#00979c, 0.7);
-                li::marker { color: rgba(#00979c, 0.7); }
-            }
+        @-webkit-keyframes fadeEffect {
+            from {opacity: 0;}
+            to {opacity: 1;}
+        }
+        
+        @keyframes fadeEffect {
+        from {opacity: 0;}
+        to {opacity: 1;}
         }
     }
 }
@@ -390,4 +342,115 @@ section {
         top:17%;
         left:-23px;
     }
+}
+
+.java {
+    color: #cc342f;
+    background-color: #cc342f;
+    border: 1px solid #cc342f;
+}
+
+.spring {
+    background-color: #6db33f;
+    border: 1px solid #6db33f;
+}
+
+.jpa {
+    background-color: #59676a;
+    border: 1px solid #59676a;
+}
+
+.mybatis {
+    background-color: #d40000;
+    border: 1px solid #d40000;
+}
+
+.jsp {
+    background-color: #e56f1f;
+    border: 1px solid #e56f1f;
+}
+
+.thymeleaf {
+    background-color: #005f0f;
+    border: 1px solid #005f0f;
+}
+
+.linux {
+    background-color: #FCC624;
+    border: 1px solid #FCC624;
+}
+
+.docker {
+    background-color: #2497ed;
+    border: 1px solid #2497ed;
+}
+
+.kafka {
+    background-color: #59676A;
+    border: 1px solid #59676A;
+}
+
+.aws {
+    background-color: #232F3E;
+    border: 1px solid #232F3E;
+}
+
+.html {
+    background-color: #E34F26;
+    border: 1px solid #E34F26;
+}
+
+.css {
+    background-color: #1572B6;
+    border: 1px solid #1572B6;
+}
+
+.bootstrap {
+    background-color: #7952B3;
+    border: 1px solid #7952B3;
+}
+
+.javascript {
+    background-color: #F7DF1E;
+    border: 1px solid #F7DF1E;
+}
+
+.react {
+    background-color: #61DAFB;
+    border: 1px solid #61DAFB;
+}
+
+.mysql {
+    background-color: #4479A1;
+    border: 1px solid #4479A1;
+}
+
+.mariadb {
+    background-color: #003545;
+    border: 1px solid #003545;
+}
+
+.oracle {
+    background-color: #F80000;
+    border: 1px solid #F80000;
+}
+
+.mongodb {
+    background-color: #47A248;
+    border: 1px solid #47A248;
+}
+
+.git {
+    background-color: #F05032;
+    border: 1px solid #F05032;
+}
+
+.github {
+    background-color: #181717;
+    border: 1px solid #181717;
+}
+
+.arduino {
+    background-color: #00979D;
+    border: 1px solid #00979D;
 }
