--- a/style.css
+++ b/style.css
@@ -1,289 +1,124 @@
 * {
   font-family: "Noto Sans KR", sans-serif;
+  color: rgba(0, 0, 0, 0.7);
 }
 
-ul {
-  margin: 0;
-  font-size: 14px;
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
 }
 
-.list {
-  color: black;
-  margin: 0;
-  opacity: 0.7;
-}
-.list li:last-child {
-  padding-bottom: 0;
-}
-.list li {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-.list .list-title {
-  font-weight: bold;
-  font-size: 14px;
+a:link {
+  color: rgba(0, 0, 0, 0.7);
 }
 
-.list > li:first-child {
-  padding-top: 0;
+a:visited {
+  color: rgba(0, 0, 0, 0.7);
 }
 
-/* layout */
-body {
+a:hover {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.cards {
   position: relative;
-  background-color: #f7f7f7;
-  transition: all 1s;
-}
-
-header {
-  height: 100px;
-}
-
-footer {
-  height: 100px;
-}
-
-#clip {
-  position: absolute;
-  top: 93px;
-  left: 72%;
-  transform: rotate(3deg);
-}
-
-main {
-  max-width: 1000px;
-  margin: 0 auto;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-#banner {
-  display: flex;
-  flex-direction: column;
-  height: 330px;
-  background-color: rgb(146, 215, 100);
-  border-bottom-right-radius: 80px;
-  margin-bottom: 10%;
-}
-#banner .banner-title {
-  height: 60%;
-  padding: 5% 7%;
-}
-#banner .banner-title .title {
-  color: white;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 4px;
-}
-#banner .banner-title .subtitle {
-  color: white;
-  font-size: 29px;
-  font-weight: bold;
-  letter-spacing: 1px;
-}
-#banner #contact {
-  height: 40%;
-}
-#banner #contact .contact-info {
-  display: flex;
-  padding-left: 7%;
-}
-#banner #contact .contact-info ul {
-  padding: 0;
-  width: 30%;
   list-style-type: none;
-  color: white;
-  font-size: 15px;
-  opacity: 1;
-}
-#banner #contact .contact-info ul a:link {
-  color: white;
-}
-#banner #contact .contact-info ul a:visited {
-  color: white;
-}
-#banner #contact .contact-info ul a:hover {
-  color: grey;
-}
-#banner #contact .contact-info ul a {
-  text-decoration: none;
-  padding-right: 5px;
-}
-#banner #contact .contact-info i {
-  padding-right: 3%;
-}
-
-article {
-  padding: 0 12% 10% 12%;
-}
-
-.section-title {
-  width: 100%;
-  padding-bottom: 1%;
-  margin: 0;
-  color: #6db33f;
-  font-size: 22pt;
-  font-weight: 100;
-  border-bottom: 2px solid #6db33f;
-  opacity: 0.7;
-}
-
-section {
-  padding: 6% 2% 20% 2%;
-}
-
-#aboutme .aboutme-content {
-  margin: 0;
   padding: 0;
-  opacity: 0.7;
+  max-width: 1240px;
+  margin: 20% auto;
 }
 
-#project hr {
-  margin: 5% 0 5% 0;
-  background-color: #6db33f;
-  height: 1px;
-  border: 0;
-  opacity: 0.7;
-}
-#project .project .project-header .title {
-  padding-bottom: 5px;
-  font-size: 14pt;
-  font-weight: bold;
-  opacity: 0.7;
-}
-#project .project .project-header .title i {
-  padding-right: 1%;
-  opacity: 0.7;
-  color: #6db33f;
-}
-#project .project .project-header .title a {
-  text-decoration: none;
-}
-#project .project .project-header .title a:link {
-  color: black;
-}
-#project .project .project-header .title a:visited {
-  color: black;
-}
-#project .project .project-header .title a:hover {
-  color: grey;
-}
-#project .project .project-header .subtitle {
-  opacity: 0.7;
-}
-#project .project .project-body {
-  display: flex;
-  padding-top: 3%;
-}
-#project .project .project-body .pb-left {
-  width: 20%;
-}
-#project .project .project-body .pb-left .type {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 5%;
-  font-size: 15px;
-  font-weight: bold;
-  opacity: 0.8;
-}
-#project .project .project-body .pb-left .task {
-  font-size: 11pt;
-  padding: 0;
-  opacity: 0.7;
-}
-#project .project .project-body .pb-left .period {
-  font-size: 10pt;
-  padding: 0;
-  opacity: 0.7;
-}
-#project .project .project-body .pb-right {
-  width: 80%;
-}
-#project .project .project-body .pb-right .simple {
-  padding: 0 10px;
-  font-size: 14px;
-  opacity: 0.7;
-}
-#project .project .project-body .pb-right .detail {
-  display: none;
-}
-#project .project .project-body .pb-right .hs {
-  padding: 0 10px;
-  float: right;
-  background-color: white;
-  outline: none;
-  border: none;
-  font-size: 14px;
-  opacity: 0.7;
-}
-#project .project .project-body .pb-right button:hover {
-  opacity: 0.3;
-}
-
-#skills hr {
-  margin: 8% 0 6% 0;
-  height: 1px;
-  border: 0;
-  opacity: 0.7;
-}
-#skills .skills .skills-title {
-  padding-left: 2%;
-  padding-bottom: 4%;
-  font-size: 22px;
-  font-weight: bold;
-  opacity: 0.7;
-}
-#skills .skills .tab {
-  overflow: hidden;
-}
-#skills .skills .tab button {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 0;
-  outline: none;
+.card {
+  width: 1120px;
+  height: 1754px;
+  padding: 0 60px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: #ccc;
+  border-radius: 3px;
+  box-shadow: 0 0 40px #000;
+  transform: translateY(0) rotate(4deg) translateX(25px) scale(1);
+  transform-origin: 0 0;
+  transition: transform 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8) 0.1s, background 0.4s linear;
   cursor: pointer;
-  transition: 0.3s;
-  opacity: 0.4;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
-#skills .skills .tab button:hover {
-  opacity: 1;
-}
-#skills .skills .tab button.active {
-  opacity: 1;
-}
-#skills .skills .tabcontent {
-  display: none;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 5px 20px;
-}
-#skills .skills .tabcontent .skills-item {
-  animation: fadeEffect 1s;
-  padding: 3% 0 3% 0;
-}
-#skills .skills .tabcontent .skills-item .skills-item-title {
-  margin-left: 3%;
-}
-#skills .skills .tabcontent .skills-item .skills-item-title img {
-  height: 40px;
-}
-#skills .skills .tabcontent .skills-item .list {
-  padding: 20px 20px 20px 30px;
-}
-@keyframes fadeEffect {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.card :last-child {
+  margin-bottom: 0;
 }
 
+.card--next {
+  z-index: 5;
+  transform: translateY(-50px) rotate(4deg) translateX(70px) scale(1);
+}
+
+.card--out {
+  animation: card-out 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8);
+  transform: translateY(-40px) rotate(2deg) translateX(100px) scale(0.95);
+  z-index: 1;
+  background: #bbb;
+}
+
+@keyframes card-out {
+  0% {
+    z-index: 20;
+    transform: translateY(0px) rotate(-4deg);
+  }
+  50% {
+    transform: translateY(-120%) rotate(-5deg) translateX(-40px);
+  }
+  80% {
+    z-index: 1;
+  }
+  100% {
+    transform: translateY(-40px) rotate(2deg) translateX(100px) scale(0.95);
+  }
+}
+.card--current {
+  cursor: auto;
+  -webkit-user-select: auto;
+     -moz-user-select: auto;
+          user-select: auto;
+  position: relative;
+  z-index: 10;
+  opacity: 1;
+  background: #fff;
+  transform: rotate(0deg) translateX(0%) scale(1);
+}
+
+.card--up {
+  transform: translateY(-30px);
+  animation: card-up 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8);
+}
+
+@keyframes card-up {
+  0% {
+    z-index: 20;
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
+}
 .timeline li {
   position: relative;
-  min-height: 40px;
+  min-height: 60px;
   list-style: none;
   padding: 0 0 0 10px;
+}
+.timeline li .title {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0;
+}
+.timeline li .subtitle {
+  font-size: 12px;
+  font-weight: 0;
 }
 .timeline li::before {
   opacity: 0.7;
@@ -301,121 +136,463 @@ section {
 .timeline li::after {
   content: "";
   position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #6db33f;
+  width: 9px;
+  height: 9px;
+  background-color: black;
   border-radius: 50%;
-  top: 17%;
+  top: 15%;
   left: -23px;
 }
 
-.java {
-  color: #cc342f;
-  background-color: #cc342f;
-  border: 1px solid #cc342f;
+#snackbar {
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 16px;
+  position: fixed;
+  z-index: 9999;
+  left: 50%;
+  font-size: 17px;
 }
 
-.spring {
-  background-color: #6db33f;
-  border: 1px solid #6db33f;
+#snackbar.show {
+  animation: fadein 0.5s;
+  top: 30px;
 }
 
-.jpa {
-  background-color: #59676a;
-  border: 1px solid #59676a;
+#snackbar.hide {
+  animation: fadeout 0.5s;
+  top: -60px;
 }
 
-.mybatis {
-  background-color: #d40000;
-  border: 1px solid #d40000;
+@keyframes fadein {
+  from {
+    top: 0;
+    opacity: 0;
+  }
+  to {
+    top: 30px;
+    opacity: 1;
+  }
+}
+@keyframes fadeout {
+  from {
+    top: 30px;
+    opacity: 1;
+  }
+  to {
+    top: 0;
+    opacity: 0;
+  }
+}
+#first-page {
+  display: grid;
+  grid-template: "header header header" 250px "aside section section" 1404px "footer footer footer" 100px;
+  grid-template-columns: 1.1fr 2.9fr;
+}
+#first-page header {
+  grid-area: header;
+  border-bottom: 2px solid black;
+  display: flex;
+  align-items: center;
+}
+#first-page header .content .title {
+  font-size: 40px;
+  font-weight: bold;
+}
+#first-page header .content .subtitle {
+  font-size: 29px;
+  font-weight: bold;
+}
+#first-page aside {
+  grid-area: aside;
+  margin-top: 25px;
+  padding: 0 10px;
+  border-right: 1px solid black;
+}
+#first-page aside .content {
+  margin-top: 100px;
+}
+#first-page aside .content .content-title {
+  margin-bottom: 20px;
+  font-size: 22px;
+  font-weight: bold;
+  letter-spacing: 4px;
+}
+#first-page aside #my-image {
+  margin-top: 20px;
+  text-align: center;
+}
+#first-page aside #my-image img {
+  width: 250px;
+  height: 250px;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+#first-page aside #contact {
+  margin-top: 40px;
+}
+#first-page aside #contact .items {
+  list-style: none;
+  padding-left: 10px;
+}
+#first-page aside #contact .items .item {
+  font-size: 16px;
+  padding: 3px 0;
+}
+#first-page aside #contact .items .item i {
+  padding-right: 5%;
+}
+#first-page section {
+  grid-area: section;
+  margin-top: 25px;
+  padding-left: 40px;
+}
+#first-page section article {
+  margin-top: 10px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: solid 1px black;
+}
+#first-page section article .article-title {
+  padding-bottom: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  letter-spacing: 4px;
+}
+#first-page section article .content {
+  padding: 10px 10px;
+}
+#first-page section #about-me p {
+  padding-left: 5px;
+  margin: 0;
+  font-size: 13px;
+}
+#first-page section #projects .content .list {
+  font-size: 12px;
+  padding-left: 20px;
+  list-style-type: disc;
+}
+#first-page section #projects .content .list li:last-child {
+  padding-bottom: 0;
+}
+#first-page section #projects .content .list li {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+#first-page section #projects .content .list ul {
+  list-style-type: circle;
+  padding-left: 30px;
+}
+#first-page section #projects .content .list > li {
+  padding-top: 20px;
+}
+#first-page section #projects .content .list > li:first-child {
+  padding-top: 0;
+}
+#first-page section #projects .content li {
+  padding-top: 10px;
+}
+#first-page section #projects .content .title {
+  display: flex;
+  padding-bottom: 2px;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0;
+  align-items: center;
+}
+#first-page section #projects .content .title .date {
+  padding-left: 10px;
+  font-size: 10px;
+}
+#first-page section #projects .content .subtitle {
+  font-size: 13px;
+  font-weight: 100;
+}
+#first-page #skills {
+  border: none;
+}
+#first-page #skills .content {
+  padding-left: 10px;
+}
+#first-page #skills .content .skills .title {
+  font-size: 15px;
+  font-weight: bold;
+  padding-bottom: 3px;
+}
+#first-page #skills .content .skills .icons {
+  padding-bottom: 15px;
+}
+#first-page footer {
+  grid-area: footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.jsp {
-  background-color: #e56f1f;
-  border: 1px solid #e56f1f;
+#second-page {
+  display: grid;
+  grid-template: "header header header" 150px "section section section" 1504px "footer footer footer" 100px;
+}
+#second-page header {
+  grid-area: header;
+  border-bottom: 2px solid black;
+  display: flex;
+  align-items: end;
+}
+#second-page header .content .title {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 4px;
+  padding-left: 40px;
+  padding-bottom: 20px;
+}
+#second-page section {
+  grid-area: section;
+  padding: 30px 30px 0;
+}
+#second-page section article .content {
+  display: flex;
+}
+#second-page section article .content .left-side {
+  padding-left: 50px;
+  width: 25%;
+  padding-top: 50px;
+}
+#second-page section article .content .left-side .title {
+  font-size: 16px;
+  font-weight: bold;
+}
+#second-page section article .content .left-side .size {
+  padding-top: 10px;
+  font-size: 14px;
+  font-weight: bold;
+}
+#second-page section article .content .left-side .role {
+  padding-top: 7px;
+  font-size: 13px;
+}
+#second-page section article .content .left-side .date {
+  font-size: 12px;
+}
+#second-page section article .content .right-side {
+  position: relative;
+  width: 75%;
+  margin-left: 30px;
+  padding: 50px 0;
+  border-bottom: solid 1px black;
+}
+#second-page section article .content .right-side .simple {
+  cursor: pointer;
+  font-size: 14px;
+}
+#second-page section article .content .right-side .simple p {
+  margin: 0;
+  line-height: 24px;
+}
+#second-page section article .content .right-side .detail .title {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+#second-page section article .content .right-side .detail .list {
+  margin: 0;
+  margin-top: 15px;
+  padding-left: 23px;
+  list-style-type: disc;
+}
+#second-page section article .content .right-side .detail .list li:last-child {
+  padding-bottom: 0;
+}
+#second-page section article .content .right-side .detail .list li {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+#second-page section article .content .right-side .detail .list .list-title {
+  font-weight: bold;
+}
+#second-page section article .content .right-side .detail .list ul {
+  list-style-type: circle;
+}
+#second-page section article .content .right-side .detail .list > li {
+  padding-top: 20px;
+}
+#second-page section article .content .right-side .detail .list > li:first-child {
+  padding-top: 0;
+}
+#second-page section article .content .right-side .detail button {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  background-color: white;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  opacity: 0.7;
+  cursor: pointer;
+}
+#second-page section article .content .right-side .detail button:hover {
+  opacity: 0.3;
+}
+#second-page section article .content .right-side .note-wrap {
+  width: 500px;
+  min-height: 500px;
+  padding: 35px;
+  margin: 0 22px 44px 22px;
+  position: absolute;
+  top: 10%;
+  left: 100px;
+  font-size: 13px;
+  vertical-align: top;
+  z-index: 10;
+  background: #fff;
+  box-shadow: 0 2px 14px rgba(0, 0, 0, 0.4);
+}
+#second-page section article .content .right-side .note-wrap:before {
+  display: block;
+  content: "";
+  background: rgba(227, 200, 114, 0.4);
+  width: 130px;
+  height: 28px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 6px/18px 0;
+  position: absolute;
+  top: -13px;
+  left: 215px;
+}
+#second-page section > article:first-child .content .left-side {
+  padding-top: 20px;
+}
+#second-page section > article:first-child .content .right-side {
+  padding-top: 20px;
+}
+#second-page section > article:last-child .content .right-side {
+  border-bottom: none;
+}
+#second-page section > article:first-child::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 84%;
+  background-color: black;
+  top: 180px;
+  left: 347px;
+  z-index: -1;
+}
+#second-page footer {
+  grid-area: footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#second-page footer .card-footer {
+  width: 100%;
+  z-index: 1;
 }
 
-.thymeleaf {
-  background-color: #005f0f;
-  border: 1px solid #005f0f;
+#third-page {
+  display: grid;
+  grid-template: "header header" 150px "section section" 1504px "footer footer" 100px;
 }
-
-.linux {
-  background-color: #fcc624;
-  border: 1px solid #fcc624;
+#third-page header {
+  grid-area: header;
+  border-bottom: 3px solid black;
+  display: flex;
+  align-items: end;
 }
-
-.docker {
-  background-color: #2497ed;
-  border: 1px solid #2497ed;
+#third-page header .content .title {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 4px;
+  padding-left: 40px;
+  padding-bottom: 20px;
 }
-
-.kafka {
-  background-color: #59676a;
-  border: 1px solid #59676a;
+#third-page section {
+  grid-area: section;
+  padding: 30px 30px 0;
+  display: flex;
 }
-
-.aws {
-  background-color: #232f3e;
-  border: 1px solid #232f3e;
+#third-page section article {
+  width: 50%;
+  padding: 20px;
 }
-
-.html {
-  background-color: #e34f26;
-  border: 1px solid #e34f26;
+#third-page section article .skills {
+  padding-top: 40px;
 }
-
-.css {
-  background-color: #1572b6;
-  border: 1px solid #1572b6;
+#third-page section article .skills .header {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+  padding-left: 5px;
+  padding-bottom: 5px;
 }
-
-.bootstrap {
-  background-color: #7952b3;
-  border: 1px solid #7952b3;
+#third-page section article .skills .content {
+  padding-top: 20px;
 }
-
-.javascript {
-  background-color: #f7df1e;
-  border: 1px solid #f7df1e;
+#third-page section article .skills .content .skill {
+  padding-top: 30px;
+  display: flex;
 }
-
-.react {
-  background-color: #61dafb;
-  border: 1px solid #61dafb;
+#third-page section article .skills .content .skill .icon {
+  width: 25%;
 }
-
-.mysql {
-  background-color: #4479a1;
-  border: 1px solid #4479a1;
+#third-page section article .skills .content .skill .ability {
+  width: 75%;
+  font-size: 12px;
 }
-
-.mariadb {
-  background-color: #003545;
-  border: 1px solid #003545;
+#third-page section article .skills .content .skill .ability .list {
+  margin: 0;
+  padding-top: 4px;
+  padding-left: 23px;
+  list-style-type: disc;
 }
-
-.oracle {
-  background-color: #f80000;
-  border: 1px solid #f80000;
+#third-page section article .skills .content .skill .ability .list li:last-child {
+  padding-bottom: 0;
 }
-
-.mongodb {
-  background-color: #47a248;
-  border: 1px solid #47a248;
+#third-page section article .skills .content .skill .ability .list li {
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
-
-.git {
-  background-color: #f05032;
-  border: 1px solid #f05032;
+#third-page section article .skills .content .skill .ability .list .list-title {
+  font-weight: bold;
 }
-
-.github {
-  background-color: #181717;
-  border: 1px solid #181717;
+#third-page section article .skills .content .skill .ability .list ul {
+  list-style-type: circle;
 }
-
-.arduino {
-  background-color: #00979d;
-  border: 1px solid #00979d;
+#third-page section article .skills .content .skill .ability .list ul ul {
+  list-style-type: square;
+}
+#third-page section article .skills .content .skill .ability .list > li:first-child {
+  padding-top: 0;
+}
+#third-page section article .skills .content > .skill:first-child {
+  padding-top: 0;
+}
+#third-page section article > .skills:first-child {
+  padding-top: 0;
+}
+#third-page section > article:first-child::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 84%;
+  background-color: black;
+  top: 180px;
+  left: 50%;
+  z-index: -1;
+}
+#third-page footer {
+  grid-area: footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#third-page footer .card-footer {
+  width: 100%;
+  z-index: 1;
 }/*# sourceMappingURL=style.css.map */
